<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mn_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/mn_listData"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_list_data"/>
        <item
            android:id="@+id/mn_manipulasi"
            android:icon="@drawable/ic_edit"
            android:title="@string/menu_data_manipulation"/>
        <item
            android:id="@+id/mn_logout"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_logout"/>
        <item
            android:id="@+id/mn_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about_me"/>
    </group>
</menu>