<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_35sdp"
        android:src="@drawable/im_login"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_40ssp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome_login"
            android:textSize="@dimen/_18ssp"
            android:textColor="@color/guava"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/guava"
            android:hint="@string/username"
            android:inputType="number"
            android:textColorHint="@color/lightGray"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/guava"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/lightGray"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"/>
        <CheckBox
            android:id="@+id/cb_showPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/guava"
            android:text="@string/show_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button_radius"
            android:text="@string/btn_login"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/background"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_gravity="center"
            android:text="@string/txt_forgot_pass"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/guava"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>