<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".Fragment.AboutFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginBottom="@dimen/_35sdp"
        android:layout_gravity="center"
        android:src="@drawable/fidah"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_guava"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/namaku"
            android:textSize="@dimen/_26ssp"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_3sdp"
            android:text="@string/nimku"
            android:textSize="@dimen/_22sdp"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:text="@string/kelasku"
            android:textSize="@dimen/_26sdp"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/graphics"/>
    </LinearLayout>

</LinearLayout>